added colons and removed semicolons -- updated test files to work with new syntax

--- a/microc/Makefile
+++ b/microc/Makefile
@@ -27,7 +27,7 @@ microc.native :
 clean :
 	ocamlbuild -clean
 	rm -rf testall.log ocamlllvm *.diff
-	rm *.s *.err *.ll
+	rm *.err *.ll *.exe *.s *.out
 
 # Testing the "printbig" example
 
